# AllTestHere

./: .gitignore  main.py  pyproject.toml
TryScrapy/normal/: main.py
TryScrapy/normal/normal/: db.py  filters.py  items.py  middlewares.py  pipelines.py  settings.py
TryScrapy/normal/normal/spiders/: with_filter.py
